# syndisco

./: .buildinfo  .gitignore  CHANGELOG.md  CITATION.cff  README.md  api.html  environment.dev.yaml  environment.yaml  file_utils.py  genindex.html  guides.html  index.html  installation.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  requirements.dev.txt  requirements.txt  search.html  searchindex.js  syndisco.html
.github/workflows/: docs.yml
_sources/: installation.rst.txt  overview.rst.txt
_static/: custom.css
docs/: README.md  api.html  conf.py  generate_docs.sh  genindex.html  getting_started.md  guides.html  guides_link.html  index.html  index.rst  installation.html  objects.inv  overview.html  overview_link.html  py-modindex.html  search.html  searchindex.js  tutorial.ipynb
docs/.jupyter_cache/: global.db
docs_source/: api.rst  index.rst
guides/: creating_annotations.html  creating_annotations.ipynb  creating_discussions.html  creating_discussions.ipynb  creating_experiments.html  creating_experiments.ipynb
resources/: random_choice.drawio  sdf_input.drawio  sdf_input_technical.drawio
sphinx/: conf.py  generate_docs.sh  overview.rst
src/: export_dataset.py  format_discussions.py  generate_annotation_configs.py  generate_annotations.py  generate_conv_configs.py  generate_conversations.py  run.py  sdf_create_annotations.py  sdf_create_conversations.py  temp.ipynb
tests/: dummy.py  model.py  test_actor.py  test_annotation.py  test_conversation.py  test_experiments.py  test_jobs.py  test_persona.py  test_turn_managers.py
(+214 files in other folders)
