[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syndisco"
version = "1.0.0"
authors = [
  { name="Dimitris Tsirmpas", email="tsirbasdim@gmail.com" },
]
description = "Automated experiment creation and execution using LLM agents"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "pandas",
  "coloredlogs",
  "transformers",
  "bitsandbytes",
  "accelerate>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/dimits-ts/synthetic_discussion_framework"
Issues = "https://github.com/dimits-ts/synthetic_discussion_framework/issues"